--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,27 @@
 
 <body>
 
-	<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Скатился что даль пунктуация снова агенство повстречался строчка толку города над своего дороге ведущими коварный дорогу то, ipsum своих грамматики.</p>
+	<header class="main-header grid" style="background-image: url('img/0-header.jpg');">
+		<div class="header-content grid">
+			<h1>We are Real Creators</h1>
+			<div class="header-buttons">
+				<a href="#" class="button">Follow</a>
+				<a href="#" class="button button-gray">Go Home</a>
+			</div>
+		</div>
+	</header>
+
+	<section class="portfolio-section grid">
+		<div class="portfolio-item grid" style="background-image: url(../img/1.jpg)"><span>Cool </span></div>
+		<div class="portfolio-item grid" style="background-image: url(../img/2.jpg)"><span>Cool </span></div>
+		<div class="portfolio-item grid" style="background-image: url(../img/3.jpg)"><span>Cool </span></div>
+		<div class="portfolio-item grid" style="background-image: url(../img/4.jpg)"><span>Cool </span></div>
+		<div class="portfolio-item grid" style="background-image: url(../img/5.jpg)"><span>Cool </span></div>
+		<div class="portfolio-item grid" style="background-image: url(../img/6.jpg)"><span>Cool </span></div>
+		<div class="portfolio-item grid" style="background-image: url(../img/7.jpg)"><span>Cool </span></div>
+		<div class="portfolio-item grid" style="background-image: url(../img/8.jpg)"><span>Cool </span></div>
+		<div class="portfolio-item grid" style="background-image: url(../img/9.jpg)"><span>Cool </span></div>
+	</section>
 	
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
