--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,9 @@
 		<div class="portfolio-item grid" style="background-image: url(../img/7.jpg)"><span>Cool </span></div>
 		<div class="portfolio-item grid" style="background-image: url(../img/8.jpg)"><span>Cool </span></div>
 		<div class="portfolio-item grid" style="background-image: url(../img/9.jpg)"><span>Cool </span></div>
+		<div class="buttoncase text-center">
+			<a href="#" class="button">View portfolio</a>
+		</div>
 	</section>
 	
 	<link rel="stylesheet" href="css/main.min.css">
