--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,35 @@
 			<a href="#" class="button">View portfolio</a>
 		</div>
 	</section>
+
+	<section class="section-ready landing-section">
+		<div class="container grid">
+			
+			<div class="ready-left">
+				<h2>Are You Ready?<br> Are you mthfcku ready?</h2>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum est dolorem in ipsam pariatur dignissimos a reiciendis, sapiente quo magni minima ducimus illum sequi, culpa. Quaerat deserunt necessitatibus aliquid facere!</p>
+				<p>Eaque qui deserunt officiis minima placeat nihil obcaecati iure quis maxime explicabo magni mollitia voluptas cumque omnis, a repellat voluptate debitis velit suscipit veniam laborum, ea asperiores. Maxime, impedit, placeat.</p>
+			</div>
+
+			<div class="ready-right">
+				
+				<img src="img/example.jpg" class="img-responsive" alt="">
+
+			</div>
+		</div>
+	</section>
+
+	<section class="form-section">
+		<div class="container">
+			<form class="grid">
+				<div><input type="text" placeholder="Your name..." require></div>
+				<div><input type="text" placeholder="Your name..." require></div>
+				<div><input type="text" placeholder="Your name..." require></div>
+				<div><button class="button">Yes! Ready!</button></div>
+			</form>
+		</div>
+	</section>
 	
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
