Blog + footer, adaptivity

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,69 @@
 			</form>
 		</div>
 	</section>
+
+	<section class="landing-section section-blog">
+		<div class="container">
+			<h2>Ready to read our hell blog?</h2>
+
+			<div class="blog-home grid">
+				<a href="#" class="blog-item grid">
+					<span class="blog-item-img" style="background-image: url(img/1.jpg)"></span>
+					<span class="blog-item-content">
+						<h4>We Are Champions At Least Month</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo provident, numquam! Maxime commodi ducimus sapiente ex fugiat iste, provident ad quas, cum fuga modi sed nesciunt, quasi deleniti sint laborum!</p>
+					</span>
+				</a>
+				<a href="#" class="blog-item grid">
+					<span class="blog-item-img" style="background-image: url(img/2.jpg)"></span>
+					<span class="blog-item-content">
+						<h4>We Are Champions At Least Month</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo provident, numquam! Maxime commodi ducimus sapiente ex fugiat iste, provident ad quas, cum fuga modi sed nesciunt, quasi deleniti sint laborum!</p>
+					</span>
+				</a>
+				<a href="#" class="blog-item grid">
+					<span class="blog-item-img" style="background-image: url(img/3.jpg)"></span>
+					<span class="blog-item-content">
+						<h4>We Are Champions At Least Month</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo provident, numquam! Maxime commodi ducimus sapiente ex fugiat iste, provident ad quas, cum fuga modi sed nesciunt, quasi deleniti sint laborum!</p>
+					</span>
+				</a>
+				<a href="#" class="blog-item grid">
+					<span class="blog-item-img" style="background-image: url(img/4.jpg)"></span>
+					<span class="blog-item-content">
+						<h4>We Are Champions At Least Month</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo provident, numquam! Maxime commodi ducimus sapiente ex fugiat iste, provident ad quas, cum fuga modi sed nesciunt, quasi deleniti sint laborum!</p>
+					</span>
+				</a>
+				<a href="#" class="blog-item grid">
+					<span class="blog-item-img" style="background-image: url(img/5.jpg)"></span>
+					<span class="blog-item-content">
+						<h4>We Are Champions At Least Month</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo provident, numquam! Maxime commodi ducimus sapiente ex fugiat iste, provident ad quas, cum fuga modi sed nesciunt, quasi deleniti sint laborum!</p>
+					</span>
+				</a>
+				<a href="#" class="blog-item grid">
+					<span class="blog-item-img" style="background-image: url(img/6.jpg)"></span>
+					<span class="blog-item-content">
+						<h4>We Are Champions At Least Month</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo provident, numquam! Maxime commodi ducimus sapiente ex fugiat iste, provident ad quas, cum fuga modi sed nesciunt, quasi deleniti sint laborum!</p>
+					</span>
+				</a>
+				<div class="buttoncase text-center">
+					<a href="#" class="button">View blog</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer class="main-footer">
+		<div class="container">
+			<div class="footer-logo">
+				We Are Real <span>Creators</span>
+			</div>
+			<div class="footer-copy">~Ⓒ~</div>
+		</div>
+	</footer>
 	
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
